fix(web-components): fix spacing between title and subtitle/adornment on clickable vertical cards
increase spacing to 8px so there is 4px between the bottom of the underline/border and the
subtitle/adornment on hover/focus

--- a/packages/web-components/src/components/ic-card-vertical/ic-card-vertical.css
+++ b/packages/web-components/src/components/ic-card-vertical/ic-card-vertical.css
@@ -60,17 +60,20 @@ button {
     &:active {
       background-color: var(--ic-card-background-pressed);
       box-shadow: var(--ic-border-focus);
-
       .card-title {
         text-decoration: none;
       }
     }
     .card-title {
       --ic-typography-color: var(--ic-card-clickable-text);
-
       color: var(--ic-card-clickable-text);
       text-decoration: underline;
       text-decoration-thickness: var(--ic-space-1px);
+      margin-bottom: var(--ic-space-xxs);
+    }
+    .interaction-button,
+    .icon {
+      margin-bottom: var(--ic-space-xxs);
     }
   }
   &.disabled {
@@ -109,7 +112,7 @@ button {
 .card.clickable.focussed .card-title {
   display: inline-block;
   border-bottom: 0.25rem solid !important;
-  margin-bottom: -0.25rem !important;
+  margin-bottom: 0 !important;
   text-decoration: none;
 }
 
@@ -121,7 +124,7 @@ button {
     text-decoration-thickness: 25%;
     text-underline-offset: 25%;
     border-bottom: 0 !important;
-    margin-bottom: 0 !important;
+    margin-bottom: 0.25rem !important;
   }
 }
 
